Make slides center

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -55,6 +55,13 @@ header, footer {
 main {
     -webkit-flex: 1 0 auto;
     flex: 1 0 auto;
+    text-align: center;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: column;
+    flex-flow: column;
+    -webkit-justify-content: space-around;
+    justify-content: space-around;
 }
 
 // wrappers
