--- a/src/css/main.less
+++ b/src/css/main.less
@@ -62,6 +62,10 @@ main {
     flex-flow: column;
     -webkit-justify-content: space-around;
     justify-content: space-around;
+
+    ul {
+        text-align: left;
+    }
 }
 
 // wrappers
