Added general PWA talk
Signed-off-by: Mathijs Delva <mathijs@studioemma.com>

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -29,9 +29,18 @@ a {
 }
 
 img {
-    width: 100%;
+    width: auto;
     height: auto;
+    border-radius: 3px;
+    max-height: 500px;
 }
+
+pre {
+    background-color: #f0f6ff;
+    border-radius: 3px;
+    padding: 14px;
+    color: #535c68;
+} 
 
 // sticky footer
 
