Improve some slides

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -29,10 +29,11 @@ a {
 }
 
 img {
+    display: block;
     width: auto;
+    max-width: 100%;
     height: auto;
     border-radius: 3px;
-    max-height: 512px;
 }
 
 pre {
@@ -40,7 +41,8 @@ pre {
     border-radius: 3px;
     padding: 14px;
     color: #535c68;
-} 
+    white-space: pre-wrap;
+}
 
 // sticky footer
 
