Hide selected text

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -44,6 +44,10 @@ pre {
     white-space: pre-wrap;
 }
 
+::selection {
+    background: rgba(255, 255, 255, 0);
+}
+
 // sticky footer
 
 html, body, #root {
