Improve some audit stuff

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,5 +1,6 @@
 @import "_var.less";
 @import "_lib.less";
+@import "_fonts.less";
 
 body {
     background: @color-theme-background;
@@ -98,10 +99,9 @@ main {
 
 // footer
 
-.copyright {
+.pager {
     text-align: center;
     padding: 2rem 0;
-    color: @color-theme-hint;
 }
 
 // buttons
